# university-pythonweb-hw-06

./: README.md  alembic.ini  db.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: c927b34df760_initial_migration.py
